src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Acknowledgment_Date__c</fullName>
        <description>The date that you acknowledged this Opportunity.</description>
        <inlineHelpText>The date that you acknowledged this Opportunity.</inlineHelpText>
        <label>Acknowledgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acknowledgment_Status__c</fullName>
        <description>The acknowledgement status of this Opportunity. </description>
        <inlineHelpText>The acknowledgement status of this Opportunity.</inlineHelpText>
        <label>Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Now</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_Date__c</fullName>
        <description>The date the donor was asked for this Donation. This may be different from the date you received it.</description>
        <inlineHelpText>The date the donor was asked for this Donation. This may be different from the date you received it.</inlineHelpText>
        <label>Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>Notes on why the donation ask was not successful.</description>
        <inlineHelpText>Notes on why the donation ask was not successful.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <description>The Fair Market Value of an In-Kind gift.</description>
        <inlineHelpText>The Fair Market Value of an In-Kind gift.</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Strategy__c</fullName>
        <description>Categorizes the type of ask for this Opportunity, for example, New Donor.</description>
        <inlineHelpText>Categorizes the type of ask for this Opportunity, for example, New Donor.</inlineHelpText>
        <label>Gift Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Donor</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Contract_Date__c</fullName>
        <description>The date of the Grant's inception, according to the document or contract sent by the grantmaking organization.</description>
        <inlineHelpText>The date of the Grant's inception, according to the document or contract sent by the grantmaking organization.</inlineHelpText>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Contract_Number__c</fullName>
        <description>Use this to track unique numbers sometimes assigned by grantmaking organizations.</description>
        <inlineHelpText>Use this to track unique numbers sometimes assigned by grantmaking organizations.</inlineHelpText>
        <label>Grant Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Period_End_Date__c</fullName>
        <description>The date on which the period of the grant ends.</description>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Period_Start_Date__c</fullName>
        <description>The date on which the period of the grant begins.</description>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Program_Area_s__c</fullName>
        <description>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</description>
        <inlineHelpText>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</inlineHelpText>
        <label>Program Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Requirements_Website__c</fullName>
        <description>A URL that points to the grant requirements on the grantmaker's website.</description>
        <inlineHelpText>A URL that points to the grant requirements on the grantmaker's website.</inlineHelpText>
        <label>Grant Requirements Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Honoree_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the honoree for this Donation.</description>
        <inlineHelpText>Lookup to the Contact record of the honoree for this Donation.</inlineHelpText>
        <label>Honoree Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Honoree Contact)</relationshipLabel>
        <relationshipName>Honoree_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</inlineHelpText>
        <label>Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Description__c</fullName>
        <description>Holds any rich text description of the In-Kind Gift, including pictures.</description>
        <inlineHelpText>Holds any rich text description of the In-Kind Gift, including pictures.</inlineHelpText>
        <label>In-Kind Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>In_Kind_Donor_Declared_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the donor provided the Fair Market Value for this In-Kind Gift.</description>
        <inlineHelpText>Indicates whether the donor provided the Fair Market Value for this In-Kind Gift.</inlineHelpText>
        <label>In-Kind Donor Declared Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Kind_Type__c</fullName>
        <description>The type of In-Kind Gift, for example, Goods or Services.</description>
        <inlineHelpText>The type of In-Kind Gift, for example, Goods or Services.</inlineHelpText>
        <label>In-Kind Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goods</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Grant_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Grant is a renewal of a previous Grant.</description>
        <inlineHelpText>Indicates whether the Grant is a renewal of a previous Grant.</inlineHelpText>
        <label>Is Grant Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account record of the company that will match this Donation.</description>
        <inlineHelpText>Lookup to the Account record of the company that will match this Donation.</inlineHelpText>
        <label>Matching Gift Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Employer__c</fullName>
        <description>The name of the company that will match this Donation.</description>
        <inlineHelpText>The name of the company that will match this Donation.</inlineHelpText>
        <label>Matching Gift Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Status__c</fullName>
        <description>The status of the Matching Gift for this Donation, for example, Submitted or Received.</description>
        <inlineHelpText>The status of the Matching Gift for this Donation, for example, Submitted or Received.</inlineHelpText>
        <label>Matching Gift Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matching_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Opportunity record for the Matching Gift for this Donation.</description>
        <inlineHelpText>Lookup to the Opportunity record for the Matching Gift for this Donation.</inlineHelpText>
        <label>Matching Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>MatchedGifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Grant_Deadline_Due_Date__c</fullName>
        <description>The due date for this Opportunity's next Deliverable (read only).</description>
        <inlineHelpText>The due date for this Opportunity's next Deliverable (read only).</inlineHelpText>
        <label>Next Deliverable Date</label>
        <summarizedField>Grant_Deadline__c.Grant_Deadline_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Grant_Deadline__c.Grant_Deadline_Due_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Grant_Deadline__c.Grant_Deliverable_Close_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Grant_Deadline__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notification_Message__c</fullName>
        <description>A personalized message for the notification recipient.</description>
        <inlineHelpText>A personalized message for the notification recipient.</inlineHelpText>
        <label>Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Preference__c</fullName>
        <description>Indicates how the notification recipient should be notified, for example, by email or phone.</description>
        <inlineHelpText>Indicates how the notification recipient should be notified, for example, by email or phone.</inlineHelpText>
        <label>Notification Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Do Not Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the person who should be notified about this Donation.</description>
        <inlineHelpText>Lookup to the Contact record of the person who should be notified about this Donation.</inlineHelpText>
        <label>Notification Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Notification Recipient)</relationshipLabel>
        <relationshipName>Notification_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Information__c</fullName>
        <description>Enter any contact information such as address, phone, or email that the donor provided for the notification recipient.</description>
        <inlineHelpText>Enter any contact information such as address, phone, or email that the donor provided for the notification recipient.</inlineHelpText>
        <label>Notification Recipient Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Name__c</fullName>
        <description>The name that the donor provided of the person you should notify about this Donation. If this field is left blank and the Notification Recipient Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The name that the donor provided of the person you should notify about this Donation. If this field is left blank and the Notification Recipient Contact field contains a value, NPSP automatically populates this field with that value.</inlineHelpText>
        <label>Notification Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Major Gift Opportunity this child Opportunity belongs to</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>ChildOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Grant_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Grant is a renewal of a previous Grant, use this field to relate this record to the previous Grant.</description>
        <inlineHelpText>If this Grant is a renewal of a previous Grant, use this field to relate this record to the previous Grant.</inlineHelpText>
        <label>Previous Grant/Gift Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Grants/Gifts</relationshipLabel>
        <relationshipName>Previous_Grant_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Campaign_Member_Status__c</fullName>
        <description>The status NPSP uses when it creates a Campaign Member for this Opportunity's Primary Contact and Primary Campaign Source. Leave blank to default to a responded status for Closed/Won Opportunities, and a non-responded status for other Opportunities.</description>
        <inlineHelpText>The status NPSP uses when it creates a Campaign Member for this Opportunity's Primary Contact and Primary Campaign Source. Leave blank to default to a responded status for Closed/Won Opportunities, and a non-responded status for other Opportunities.</inlineHelpText>
        <label>Primary Contact Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Contact for this Opportunity. If this is an individual Donation, NPSP attributes the Donation to the Primary Contact. If this is an organizational Donation, NPSP attributes a soft credit to the Primary Contact.</description>
        <inlineHelpText>The Primary Contact for this Opportunity. If this is an individual Donation, NPSP attributes the Donation to the Primary Contact. If this is an organizational Donation, NPSP attributes a soft credit to the Primary Contact.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <description>The date your organization identified this donor as qualifying for this Donation.</description>
        <inlineHelpText>The date your organization identified this donor as qualifying for this Donation.</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Installment_Name__c</fullName>
        <description>The installment name for inclusion in Opportunity naming. Shows the installment number in parentheses for open ended Recurring Donations, or the installment number out of the total for Recurring Donations with a set number of installments.</description>
        <formula>IF(
ISBLANK(npe03__Recurring_Donation__c),
&apos;&apos;,
  IF(
    OR(ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Open&apos;),ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Closed&apos;),ISBLANK(npe03__Recurring_Donation__r.npe03__Installments__c)),
    &apos;(&apos;&amp;TEXT(Recurring_Donation_Installment_Number__c)&amp;&apos;)&apos;,
    &apos;(&apos;&amp;TEXT(Recurring_Donation_Installment_Number__c)&amp;&apos; &apos;&amp;$Label.oppInstallmentsOf&amp;&apos; &apos;&amp;TEXT(npe03__Recurring_Donation__r.npe03__Installments__c)&amp;&apos;)&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The installment name for inclusion in Opportunity naming. Shows the installment number in parentheses for open ended Recurring Donations, or the installment number out of the total for Recurring Donations with a set number of installments.</inlineHelpText>
        <label>Recurring Donation Installment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Installment_Number__c</fullName>
        <description>The installment number of this Opportunity's Recurring Donation schedule.</description>
        <inlineHelpText>The installment number of this Opportunity's Recurring Donation schedule.</inlineHelpText>
        <label>Recurring Donation Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <description>The amount you are requesting. This number might be different from the final award amount.</description>
        <inlineHelpText>The amount you are requesting. This number might be different from the final award amount.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <description>Indicates whether the Donation is in honor or in memory of an individual.</description>
        <inlineHelpText>Indicates whether the Donation is in honor or in memory of an individual.</inlineHelpText>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>To_Be_Acknowledged</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Acknowledgment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acknowledgment_Status__c</field>
            <operation>equals</operation>
            <value>To Be Acknowledged,Email Acknowledgment Not Sent</value>
        </filters>
        <label>To Be Acknowledged</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Limit_Opportunity_Hierarchy</fullName>
        <active>true</active>
        <description>Opportunity Hierarchy can only go one layer deep</description>
        <errorConditionFormula>NOT(ISBLANK(ParentOpportunity__r.ParentOpportunity__c))</errorConditionFormula>
        <errorDisplayField>ParentOpportunity__c</errorDisplayField>
        <errorMessage>The selected Parent Opportunity is already a child of another Opportunity.</errorMessage>
    </validationRules>
</CustomObject>